Nebaigtas item.js ir newitem.js

--- a/item.html
+++ b/item.html
@@ -23,24 +23,26 @@
 
     </header>
     <main>
-        <div class="item-data">
-            <div class="item-image" id="item-image">Cia bus Noutrauka</div>
+        <div class="item-data" id="item-data">
+            <div class="item-image" id="item-image"></div>
             <div class="item-name" id="item-name">Butas 85 kv. m</div>
             <div class="item-description" id="item-description">Labai gra=us butai zu vaizdu i jura tai pat labai grazu
                 remontas ir pakanmkamai bnebrangus isklaikymas na bandykite pirkti ir jums viskas bis ok su situo butu
             </div>
-            <div class="item-price-location">
-                <div class="item-price" id="item-price">85000 EUR</div>
-                <div class="item-location" id="item-location">Klaipėda</div>
-            </div>
-            <div class="buttons">
-                <!-- <div class="button"> -->
-                <input class="delete" id="delete" value="Ištrinti skelbimą">
-                <!-- </div> -->
-                <!-- <div class="button"> -->
-                <input class="go-to-main" id="go-to-main" value="Visi skelbimai">
-                <!-- </div> -->
-            </div>
+            <!-- <div class="item-price-location"> -->
+            <div class="item-price" id="item-price">85000 EUR</div>
+            <div class="item-location" id="item-location">Klaipėda</div>
+            <!-- </div> -->
+            <!-- <div class="buttons"> -->
+            <!-- <div class="button"> -->
+            <button class="delete">Ištrinti skelbimą</button>
+            <!-- <input class="delete" id="delete" value="Ištrinti skelbimą"> -->
+            <!-- </div> -->
+            <!-- <div class="button"> -->
+            <button class="go-to-main">Visi skelbimai</button>
+            <!-- <input class="go-to-main" id="go-to-main" value="Visi skelbimai"> -->
+            <!-- </div> -->
+            <!-- </div> -->
         </div>
     </main>
 
