--- a/main.html
+++ b/main.html
@@ -20,15 +20,18 @@
 
     <main>
         <div class="main-title">
-            <h2>Įvairūs skelbimai</h2>
+            <h2>Visi skelbimai</h2>
         </div>
-        <section class="adds">
-            <div class="add">
-                <div class="add-photo"></div>
-                <div class="add-info">
-                    <div class="add-name"> Butas 85 kv.m.</div>
-                    <div class="add-description"> Labai gra=us butai zu vaizdu i jura tai pat labai grazu remontas ir pakanmkamai bnebrangus isklaikymas na bandykite pirkti ir jums viskas bis ok su situo butu</div>
-                    <div class="add-price" >85000 EUR</div>
+        <section class="items" id="items">
+            <div class="item-wrapper">
+                <div class="item-image"></div>
+                <div class="item-info">
+                    <div class="item-name"> Butas 85 kv.m.</div>
+                    <div class="item-description"> Labai gra=us butai zu vaizdu i jura tai pat labai grazu remontas ir pakanmkamai bnebrangus isklaikymas na bandykite pirkti ir jums viskas bis ok su situo butu</div>
+                    <div class="item-price" >85000 EUR</div>
+                </div>
+                <div class="item-button-wrapper">
+                    <button class="item-button">Plačiau</button>
                 </div>
             </div>
             <div class="divider"></div>
